[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "libpff-python-windows"
version = "20231205"
description = "Python bindings for libpff — with Windows wheels"
readme = "README"
requires-python = ">=3.9"

authors = [
  { name = "Joachim Metz", email = "joachim.metz@gmail.com" }
]

keywords = ["pst", "ost", "outlook", "forensics", "libpff"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[tool.setuptools.packages.find]
include = ["pypff*"]

